tests/baselines/reference/esDecoratorsMetadata3(strict=true,target=es2022).errors.txt
/foo.ts(2,13): error TS7006: Parameter '_' implicitly has an 'any' type.
/foo.ts(2,16): error TS7006: Parameter 'context' implicitly has an 'any' type.
/foo.ts(16,1): error TS2531: Object is possibly 'null'.
/foo.ts(17,1): error TS2531: Object is possibly 'null'.


==== /foo.ts (4 errors) ====
    function appendMeta(key: string, value: string) {
        return (_, context) => {
                ~
!!! error TS7006: Parameter '_' implicitly has an 'any' type.
                   ~~~~~~~
!!! error TS7006: Parameter 'context' implicitly has an 'any' type.
            const existing = context.metadata[key] ?? [];
            context.metadata[key] = [...existing, value];
        };
    }
    
    @appendMeta('a', 'x')
    class C {
    }
    
    @appendMeta('a', 'z')
    class D extends C {
    }
    
    C[Symbol.metadata].a; // ['x']
    ~~~~~~~~~~~~~~~~~~
!!! error TS2531: Object is possibly 'null'.
    D[Symbol.metadata].a; // ['x', 'z']
    ~~~~~~~~~~~~~~~~~~
!!! error TS2531: Object is possibly 'null'.
    